--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.4.3</version>
 		</dependency>
+		<dependency>
+		  <groupId>org.pegdown</groupId>
+		  <artifactId>pegdown</artifactId>
+		  <version>1.6.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>PathfindingWeb</finalName>
